<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/titulo"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:helperText="@string/obligatorio"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/tit_usuario"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>



    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:endIconMode="password_toggle"
        app:helperText="@string/obligatorio"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="80dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/Enviar"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/salir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="90dp"
        android:text="@string/Salir"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>