<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imagen"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    android:src="@drawable/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="NotSibling"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    android:text="@string/Bienvenido"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:layout_marginTop="25dp"/>

                <TextView
                    android:id="@+id/dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="NotSibling"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    android:textSize="17sp"

                    android:layout_marginTop="55dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/boton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion_global"
                    />
                <Button
                    android:id="@+id/boton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/boton1"
                    android:text="@string/movimientos"
                    />
                <Button
                    android:id="@+id/boton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/boton2"
                    android:text="@string/transferencias"
                    />
                <Button
                    android:id="@+id/boton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/boton3"
                    android:text="@string/cambiar_contrase_a"
                    />
                <Button
                    android:id="@+id/boton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/boton4"
                    android:text="@string/promociones"
                    />
                <Button
                    android:id="@+id/boton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/boton5"
                    android:text="@string/cajeros"
                    />
                <Button
                    android:id="@+id/boton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/boton6"
                    android:text="@string/salir"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/appbar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="411dp"
            android:layout_height="59dp"
            android:layout_gravity="bottom"
            app:navigationIcon="@drawable/baseline_menu_24"
            tools:ignore="BottomAppBar,MissingConstraints" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_account_balance_24"
            android:contentDescription="@string/bank"
            app:layout_anchor="@id/appbar"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>