<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TransferActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/transferencias"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        />

    <TextView
        android:id="@+id/elegir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/elegir_cuenta"/>

    <Spinner
        android:id="@+id/cuentaOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elegir" />

    <LinearLayout
        android:id="@+id/layoutRadion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cuentaOrigen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <RadioGroup
            android:id="@+id/grupoRadion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cuentaPropia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_propia"
                />
            <RadioButton
                android:id="@+id/cuentaAjena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_ajena" />
        </RadioGroup>
    </LinearLayout>



    <Spinner
        android:id="@+id/cuentaDestino1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutRadion" />
    <EditText
        android:id="@+id/cuentaDestino2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutRadion"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/Cantidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cuentaDestino1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="130dp"
        >

        <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"/>

        <EditText
            android:id="@+id/cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <Spinner
        android:id="@+id/divisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/Cantidades"
        app:layout_constraintTop_toBottomOf="@+id/cuentaDestino1" />

    <CheckBox
        android:id="@+id/Justificante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Cantidades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/enviar_justificante"/>

    <Button
        android:id="@id/enviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Justificante"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Enviar"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Justificante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cancelar"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />


</androidx.constraintlayout.widget.ConstraintLayout>