<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activities.GlobalPositionActivity">

    <TextView
        android:id="@+id/posicionGlobal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movimientos"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/cuentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:layout_marginStart="20dp"/>

    <Spinner
        android:id="@+id/cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultimos_movimientos"
        android:layout_marginStart="15dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerCuentas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </androidx.cardview.widget.CardView>
</LinearLayout>